--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto Servidor web II</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <form id="image-form">
-        <input type="file" name="image" accept="image/*">
-        <button type="submit">Upload Image</button>
-    </form>
+	<h1>Bienvenido, que tipo de usuario es?</h1>
+	<button id="admin-btn">Admin</button>
+	<button id="comercio-btn">Comercio</button>
+	<button id="usuario-btn">Usuario</button>
 </body>
-<script src="./script.js"></script>
+<script src="./index.js"></script>
+<link rel="stylesheet" type="text/css" href="./index.css" media=”screen” />
 </html>
