--- a/webapp/admin.html
+++ b/webapp/admin.html
@@ -35,8 +35,9 @@
         <button>Actualizar Comercio</button>
         <button>Borrar Comercio</button>
         <button>Obtener Comercio</button>
-        <button>Obtener todos los negocios</button>
+        <button>Obtener todos los comercios</button>
       </div>
     </div>
   </body>
+  <script src="./admin.js"></script>
 </html>
