--- a/webapp/user.html
+++ b/webapp/user.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User</title>
+    <link rel="stylesheet" type="text/css" href="user.css">
+
 </head>
 <body>
-    
+    <div class="container">
+        <button class="button" id="webpages">Ver páginas web</button>
+        <button class="button" id="actions">Acciones de cuenta</button>
+    </div>
 </body>
+<script src="./user.js"></script>
 </html>
