--- a/webapp/webpages.html
+++ b/webapp/webpages.html
@@ -19,6 +19,11 @@
 				<input type="text" id="city" name="city"><br><br>
 				<label for="activity">Activity:</label>
 				<input type="text" id="activity" name="activity"><br><br>
+                <label for="scoring">Ordenar por scoring:</label>
+				<select id="scoring" name="scoring">
+                    <option>Si</option>
+                    <option>No</option>
+                </select>
 				<button type="submit">Obtener páginas</button>
 			</form>
 		</div>
