--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<h1>Bienvenido, que tipo de usuario es?</h1>
+	<h1>Bienvenido, que tipo de usuario eres?</h1>
 	<button id="admin-btn">Admin</button>
 	<button id="comercio-btn">Comercio</button>
 	<button id="usuario-btn">Usuario</button>
