--- a/webapp/admin.html
+++ b/webapp/admin.html
@@ -8,23 +8,27 @@
     <div class="container">
       <div class="header">
         <h1>Admin</h1>
-        <input type="text" placeholder="Introduzca su token JWT">
+        <input type="text" placeholder="Introduzca su token JWT" id="token_input" value="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI2NDQyYTUyYzcwZjVmYjEyOWExY2ZiNDkiLCJyb2xlIjoiYWRtaW4iLCJpYXQiOjE2ODIwODkyNjB9.nuPfxNhBMUFV3xuq2k7n63fiOY6kKixlJ62qayGjQLM">
       </div>
-      <div class="form-container">
-        <h2>Crear Comercio</h2>
-        <form>
-          <label for="name">Nombre:</label>
-          <input type="text" id="name" name="name" required>
-          <label for="cif">CIF:</label>
-          <input type="text" id="cif" name="cif" required>
-          <label for="address">Dirección:</label>
-          <input type="text" id="address" name="address" required>
-          <label for="email">Correo Electrónico:</label>
-          <input type="email" id="email" name="email" required>
-          <label for="phone">Teléfono:</label>
-          <input type="tel" id="phone" name="phone" required>
-          <button type="submit">Crear Comercio</button>
-        </form>
+      <div id="idk">
+        <div class="form-container">
+          <h2>Crear Comercio</h2>
+          <form id="cuestionario">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="cif">CIF:</label>
+            <input type="text" id="cif" name="cif" required>
+            <label for="address">Dirección:</label>
+            <input type="text" id="address" name="address" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="phone">Teléfono:</label>
+            <input type="tel" id="phone" name="phone" required>
+            <button type="submit">Crear Comercio</button>
+          </form>
+        </div>
+        <div class="messages-conatiner" id="dialog">
+        </div>
       </div>
       <div class="actions-container">
         <h2>Otras acciones</h2>
@@ -32,12 +36,13 @@
           <label for="id">ID del Comercio:</label>
           <input type="text" id="id" name="id">
         </div>
-        <button>Actualizar Comercio</button>
-        <button>Borrar Comercio</button>
-        <button>Obtener Comercio</button>
-        <button>Obtener todos los comercios</button>
+        <button id="update_btn">Actualizar Comercio</button>
+        <button id="delete_btn">Borrar Comercio</button>
+        <button id="get1_btn">Obtener Comercio</button>
+        <button id="get_btn">Obtener todos los comercios</button>
       </div>
     </div>
+    <div class="scrollable-container" style="display: none;" id="popup"></div>
   </body>
   <script src="./admin.js"></script>
 </html>
