--- a/webapp/merchant.html
+++ b/webapp/merchant.html
@@ -38,17 +38,16 @@
           </div>
           
           <div class="col" id="uploads">
-            <!-- <h3>Upload Image</h3> -->
             <div style="margin-top: 50px">
                 <div class="upload-row" id="upload_row">
                     <div class="text-image-pair">
-                        <input type="text" id="text1" name="image-url" placeholder="Texto"><br><br>
-                        <form id="form_img_1"><input type="file" id="image_upload1" name="image-upload" accept="image/*"></form><br><br>
+                        <textarea type="text" id="text1" name="image-url" placeholder="Texto"></textarea><br><br>
+                        <input type="file" id="image_upload1" name="image_upload1" accept="image/*"><br><br>
                         <img id="image_preview1" src="#" alt="Preview">
                     </div>
                     <div class="text-image-pair">
-                        <input type="text" id="text2" name="image-url" placeholder="Texto"><br><br>
-                        <form id="form_img_2"><input type="file" id="image_upload1" name="image-upload" accept="image/*"></form><br><br>
+                        <textarea type="text" id="text2" name="image-url" placeholder="Texto"></textarea><br><br>
+                        <input type="file" id="image_upload2" name="image_upload2" accept="image/*"><br><br>
                         <img id="image_preview2" src="#" alt="Preview">
                     </div>
                 </div>
