--- a/webapp/webpages.html
+++ b/webapp/webpages.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="left">
 			<h1>Filtros</h1>
-			<form>
+			<form id="filtros-form">
 				<label for="id">ID:</label>
 				<input type="text" id="id" name="id"><br><br>
 				<label for="city">City:</label>
@@ -27,114 +27,7 @@
 				<button type="submit">Obtener páginas</button>
 			</form>
 		</div>
-		<div class="right">
-			<div class="webpage_row">
-				<div class="info">
-					<h2>McDonalds</h2>
-					<b>Madrid, Comida</b><br>
-					<b>Score 4.5☆ de 59 reseñas</b>
-					<p>Restaurante de Comida Rapida McNifica y saludable</p>	
-				</div>
-				<div class="images-texts">
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>	
-				</div>
-				<div class="reviews-container">
-					<b>Reseñas: </b>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-				</div>
-			</div>
-			<div class="webpage_row">
-				<div class="info">
-					<h2>McDonalds</h2>
-					<b>Madrid, Comida</b><br>
-					<b>Score 4.5☆ de 59 reseñas</b>
-					<p>Restaurante de Comida Rapida McNifica y saludable</p>	
-				</div>
-				<div class="images-texts">
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>
-					<div class="image_text_pair" >
-						<img src="http://localhost:3000/mcrunchy-1682520325471.jpg">
-						<a>La macrunchyyfnsdjvdf sfmnsdfov  kfpdvmdnmv wkfsfsdf sfsd f  fmd fsd f sa f sd f  f sd f sd f sdfsdnfink k ovov nvkv jj o k j  k j k  </a>
-					</div>	
-				</div>
-				<div class="reviews-container">
-					<b>Reseñas: </b>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-					<div class="review">
-						<a><b>4.5☆  </b>La mejro burger de la vida</a>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div class="right" id="right_part"></div>
 	</div>
 </body>
 <script src="./webpages.js"></script>
